[package]
name = "flutter-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.34.0", features = ["yaml"] }
colour = "0.6.0"
nix = "0.23.0"
notify = "4.0.17"
serde_yaml = "0.8.21"
